--- a/work-ut_MAP.html
+++ b/work-ut_MAP.html
@@ -9,6 +9,17 @@
 
     <title>work-ut</title>
 
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+      }
+      #map {
+        height: 500px;
+        width: 100%;
+      }
+    </style>
+
     <header>
       <div class="profile_icon">
         <img src='images/profile_icon.jpeg' height=35px width=35px>
@@ -25,6 +36,23 @@
   </head>
 
   <body>
+
+    <div id = "map"></div>
+
+    <script>
+      function initMap() {
+        var location = {lat: 50.788520, lng: 5.818060}
+        var map =  new google.maps.Map(document.getElementById("map"),{zoom: 4, center: location});
+        var marker = new google.maps.Marker({
+          position: location,
+          map: map
+        });
+      }
+      
+    </script>
+
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyArRfCXYpi-2BpTtCdgv2BFCVtNMZHmfiQ&callback=initMap"></script>
+
 
     <footer>
       <div class="challenges-footer">
