--- a/work-ut_CHALLENGES.html
+++ b/work-ut_CHALLENGES.html
@@ -11,35 +11,60 @@
 
     <header>
       <div class="profile_icon">
-        <img src="images/profile_icon.jpeg" height=35px width=35px>
+        <a href="profile.html">
+          <img src="images/profile_icon.jpeg" height=40px id="profile_icon">
+        </a>
       </div>
 
       <div class="title">
-        <h1>Work-ut</h1>
+        <img src="images/logo.png" height=50px>
       </div>
 
       <div class="config_icon">
-        <img src="images/config_icon.jpeg" height=35px width=35px>
+        <img src="images/config_icon.jpeg" height=40px>
       </div>
     </header>
   </head>
 
   <body>
 
+    <div class="challenges">
+      <div class="challenge_1">
+        <a href="challenge.html">
+          <img src="images/challenges_icon.png" height=80px>
+        </a>
+        <p>Força bruta</p>
+      </div>
+
+      <div class="challenge_2">
+        <a href="challenge.html">
+          <img src="images/challenges_icon.png" height=80px>
+        </a>
+        <p>Resistência total</p>
+      </div>
+
+      <div class="challenge_3">
+        <a href="challenge.html">
+          <img src="images/challenges_icon.png" height=80px>
+        </a>
+        <p>Potência máxima</p>
+      </div>
+    </div>
+
     <footer>
       <div class="challenges-footer">
-          <img src="images/challenge_icon.jpeg" height=40px width=40px>
+          <img src="images/challenge_icon.jpeg" height=40px>
       </div>
 
       <div class="map-footer">
         <a href="work-ut_MAP.html">
-          <img src="images/map_icon.jpeg" height=40px width=40px>
+          <img src="images/map_icon.png" height=35px>
         </a>
       </div>
 
       <div class="ranking-footer">
         <a href="work-ut_RANKING.html">
-          <img src="images/ranking_icon.jpeg" height=40px width=40px>
+          <img src="images/ranking_icon.jpeg" height=35px>
         </a>
       </div>
     </footer>
