--- a/work-ut_MAP.html
+++ b/work-ut_MAP.html
@@ -6,68 +6,46 @@
     <link href="css/work-ut.css" rel="stylesheet">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <script src="lib/map.js"></script>
 
     <title>work-ut</title>
 
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-      }
-      #map {
-        height: 500px;
-        width: 100%;
-      }
-    </style>
-
     <header>
       <div class="profile_icon">
-        <img src='images/profile_icon.jpeg' height=35px width=35px>
+        <a href="profile.html">
+          <img src='images/profile_icon.jpeg' height=40px id="profile_icon">
+        </a>
       </div>
 
       <div class="title">
-        <h1>Work-ut</h1>
+        <img src="images/logo.png" height=50px>
       </div>
 
       <div class="config_icon">
-        <img src='images/config_icon.jpeg' height=35px width=35px>
+        <img src='images/config_icon.jpeg' height=40px>
       </div>
     </header>
-  </head>
 
   <body>
 
-    <div id = "map"></div>
-
-    <script>
-      function initMap() {
-        var location = {lat: 50.788520, lng: 5.818060}
-        var map =  new google.maps.Map(document.getElementById("map"),{zoom: 4, center: location});
-        var marker = new google.maps.Marker({
-          position: location,
-          map: map
-        });
-      }
-      
-    </script>
+    <div id="map"></div>
 
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyArRfCXYpi-2BpTtCdgv2BFCVtNMZHmfiQ&callback=initMap"></script>
-
 
     <footer>
       <div class="challenges-footer">
         <a href="work-ut_CHALLENGES.html">
-          <img src='images/challenge_icon.jpeg' height=40px width=40px>
+          <img src='images/challenge_icon.jpeg' height=40px>
         </a>
       </div>
 
       <div class="map-footer">
-        <img src='images/map_icon.jpeg' height=40px width=40px>
+        <img src='images/map_icon.png' height=35px>
       </div>
 
       <div class="ranking-footer">
         <a href="work-ut_RANKING.html">
-          <img src='images/ranking_icon.jpeg' height=40px width=40px>
+          <img src='images/ranking_icon.jpeg' height=35px>
         </a>
       </div>
     </footer>
