--- a/work-ut_RANKING.html
+++ b/work-ut_RANKING.html
@@ -11,36 +11,76 @@
 
     <header>
       <div class="profile_icon">
-        <img src='images/profile_icon.jpeg' height=35px width=35px>
+        <a href="profile.html">
+          <img src='images/profile_icon.jpeg' height=40px id="profile_icon">
+        </a>
       </div>
 
       <div class="title">
-        <h1>Work-ut</h1>
+        <img src="images/logo.png" height=50px>
       </div>
 
       <div class="config_icon">
-        <img src='images/config_icon.jpeg' height=35px width=35px>
+        <img src='images/config_icon.jpeg' height=40px>
       </div>
     </header>
   </head>
 
   <body>
+    <section calss="ranking_body">
+      <div class="ranking_profile1">
+        <div class="ranking_profile_picture">
+          <a href="profile.html">
+            <img src="images/profile1.jpeg" height=100px width=100px class="border">
+          </a>
+        </div>
+        <div class="ranking_status">
+          <p class="ranking_points"> 570 </p>
+          <p class="ranking_name"> Diabo Loiro </p>
+        </div>
+      </div>
+
+      <div class="ranking_profile2">
+        <div class="ranking_profile_picture">
+          <a href="profile.html">
+            <img src="images/profile2.jpeg" height=100px width=100px class="border">
+          </a>
+        </div>
+        <div class="ranking_status">
+          <p class="ranking_points"> 538 </p>
+          <p class="ranking_name"> Lula Molusco </p>
+        </div>
+      </div>
+
+      <div class="ranking_profile3">
+        <div class="ranking_profile_picture">
+          <a href="profile.html">
+            <img src="images/profile3.jpeg" height=100px width=100px class="border">
+          </a>
+        </div>
+        <div class="ranking_status">
+          <p class="ranking_points"> 511 </p>
+          <p class="ranking_name"> Obi-wan Kenobi </p>
+        </div>
+      </div>
+
+    </section>
 
     <footer>
       <div class="challenges-footer">
         <a href="work-ut_CHALLENGES.html">
-          <img src='images/challenge_icon.jpeg' height=40px width=40px>
+          <img src='images/challenge_icon.jpeg' height=40px>
         </a>
       </div>
 
       <div class="map-footer">
         <a href="work-ut_MAP.html">
-          <img src='images/map_icon.jpeg' height=40px width=40px>
+          <img src='images/map_icon.png' height=35px>
         </a>
       </div>
 
       <div class="ranking-footer">
-        <img src='images/ranking_icon.jpeg' height=40px width=40px>
+        <img src='images/ranking_icon.jpeg' height=35px>
       </div>
     </footer>
   </body>
