--- a/challenge_push-up.html
+++ b/challenge_push-up.html
@@ -12,7 +12,7 @@
     <header>
       <div class="profile_icon">
         <a href="profile.html">
-          <img src="images/profile_icon.jpeg" height=40px id="profile_icon">
+          <img src='images/profile_icon.jpeg' height=40px id="profile_icon">
         </a>
       </div>
 
@@ -24,44 +24,43 @@
   </head>
 
   <body>
-
-    <div class="challenges">
-      <div class="challenge_1">
-        <a href="challenge_push-up.html">
-          <img src="images/challenges_icon.png" height=80px>
-        </a>
-        <p>Força bruta</p>
+    <section class="challenge_body">
+      <div class="challenge_title">
+        <h1> Força bruta </h1>
       </div>
 
-      <div class="challenge_2">
-        <a href="challenge_prancha.html">
-          <img src="images/challenges_icon.png" height=80px>
-        </a>
-        <p>Resistência total</p>
+      <div class="challenge_img">
+        <img src="images/challenge_push-up.png" width=100%>
       </div>
 
-      <div class="challenge_3">
-        <a href="challenge_run.html">
-          <img src="images/challenges_icon.png" height=80px>
-        </a>
-        <p>Potência máxima</p>
+      <div class="challenge_text">
+        <p>
+          Coloque sua força a mostra: faça 5 flexões sem tocar a mão no chão!
+        </p>
       </div>
-    </div>
 
+      <div class="button">
+        <a href="profile.html">
+          <button> assinar desafio! </button>
+        </a>
+      </div>
+    </section>
     <footer>
       <div class="challenges-footer">
-          <img src="images/challenge_icon.jpeg" height=40px>
+        <a href="work-ut_CHALLENGES.html">
+          <img src='images/challenge_icon.jpeg' height=40px>
+        </a>
       </div>
 
       <div class="map-footer">
         <a href="work-ut_MAP.html">
-          <img src="images/map_icon.png" height=35px>
+          <img src='images/map_icon.png' height=35px>
         </a>
       </div>
 
       <div class="ranking-footer">
         <a href="work-ut_RANKING.html">
-          <img src="images/ranking_icon.jpeg" height=35px>
+          <img src='images/ranking_icon.jpeg' height=35px>
         </a>
       </div>
     </footer>
