--- a/profile.html
+++ b/profile.html
@@ -18,9 +18,6 @@
         <img src="images/logo.png" height=50px>
       </div>
 
-      <div class="config_icon">
-        <img src='images/config_icon.jpeg' height=40px>
-      </div>
     </header>
   </head>
 
@@ -28,24 +25,24 @@
 
     <section class="section_profile">
       <div class="profile_pic">
-        <img src="images/profile_icon.jpeg" height=150px class="profile_pic_border">
+        <img src="images/profile_icon.jpeg" height=150px width=150px class="profile_pic_border">
       </div>
 
       <div class="profile_information">
-        <p class="caps">xxX_420_Xxx</p>
-        <p id="size-font">Billy</p>
+        <p class="caps">430</p>
+        <p id="size-font">Roberto Pera</p>
       </div>
     </section>
     <section class="Email">
-      <p id="size-font">email: [email]</p>
-      <p id="size-font">contato: [contato]</p>
+      <p id="size-font">email: NotMrIncredible@incredible.com</p>
+      <p id="size-font">contato: 7070-7070</p>
     </section>
 
     <section class="Desafios">
       <p class="caps">Desafios:<p/>
-        <li id="size-font">[Hello There]</li>
-        <li id="size-font">[General Kenobi!]</li>
-        <li id="size-font">[I have the high ground!]</li>
+        <li id="size-font">Força bruta</li>
+        <li id="size-font">Resistência total</li>
+        <li id="size-font">Potência máxima</li>
     </section>
 
 
