--- a/work-ut_RANKING.html
+++ b/work-ut_RANKING.html
@@ -20,9 +20,6 @@
         <img src="images/logo.png" height=50px>
       </div>
 
-      <div class="config_icon">
-        <img src='images/config_icon.jpeg' height=40px>
-      </div>
     </header>
   </head>
 
@@ -30,7 +27,7 @@
     <section calss="ranking_body">
       <div class="ranking_profile1">
         <div class="ranking_profile_picture">
-          <a href="profile.html">
+          <a href="profile1.html">
             <img src="images/profile1.jpeg" height=100px width=100px class="border">
           </a>
         </div>
@@ -42,7 +39,7 @@
 
       <div class="ranking_profile2">
         <div class="ranking_profile_picture">
-          <a href="profile.html">
+          <a href="profile2.html">
             <img src="images/profile2.jpeg" height=100px width=100px class="border">
           </a>
         </div>
@@ -54,7 +51,7 @@
 
       <div class="ranking_profile3">
         <div class="ranking_profile_picture">
-          <a href="profile.html">
+          <a href="profile3.html">
             <img src="images/profile3.jpeg" height=100px width=100px class="border">
           </a>
         </div>
