final (ou sera q n?)

--- a/work-ut_MAP.html
+++ b/work-ut_MAP.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="br" dir="ltr">
   <head>
+
     <meta charset="utf-8">
     <link href="css/reset.css" rel="stylesheet">
     <link href="css/work-ut.css" rel="stylesheet">
@@ -10,7 +11,7 @@
 
     <title>work-ut</title>
 
-    <header>
+    <header id="map_header">
       <div class="profile_icon">
         <a href="profile.html">
           <img src='images/profile_icon.jpeg' height=40px id="profile_icon">
@@ -25,9 +26,7 @@
 
   <body>
 
-    <div id="map"></div>
-
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyArRfCXYpi-2BpTtCdgv2BFCVtNMZHmfiQ&callback=initMap"></script>
+    <img src="images/map.png">
 
     <footer>
       <div class="challenges-footer">
