--- a/profile3.html
+++ b/profile3.html
@@ -11,7 +11,9 @@
 
     <header>
       <div class="profile_icon">
-        <img src='images/profile_icon.jpeg' height=40px id="profile_icon">
+        <a href="profile.html">
+          <img src='images/profile_icon.jpeg' height=40px id="profile_icon">
+        </a>
       </div>
 
       <div class="title">
