agr sim é final

--- a/profile3.html
+++ b/profile3.html
@@ -41,7 +41,7 @@
     </section>
 
     <section class="Desafios">
-      <p class="caps">Desafios:<p/>
+      <p class="caps">Desafios assinados:<p/>
         <li id="size-font">Destruir os siths</li>
         <li id="size-font">Keep the high ground</li>
     </section>
