--- a/profile.html
+++ b/profile.html
@@ -39,7 +39,7 @@
     </section>
 
     <section class="Desafios">
-      <p class="caps">Desafios:<p/>
+      <p class="caps">Desafios assinados:<p/>
         <li id="size-font">Força bruta</li>
         <li id="size-font">Resistência total</li>
         <li id="size-font">Potência máxima</li>
