--- a/profile1.html
+++ b/profile1.html
@@ -41,7 +41,7 @@
     </section>
 
     <section class="Desafios">
-      <p class="caps">Desafios:<p/>
+      <p class="caps">Desafios assinados:<p/>
         <li id="size-font">Raio republicano</li>
         <li id="size-font">Baita infra</li>
     </section>
