--- a/profile2.html
+++ b/profile2.html
@@ -41,7 +41,7 @@
     </section>
 
     <section class="Desafios">
-      <p class="caps">Desafios:<p/>
+      <p class="caps">Desafios assinados:<p/>
         <li id="size-font">Clarinete</li>
     </section>
 
