--- a/work-ut_MAP.html
+++ b/work-ut_MAP.html
@@ -26,7 +26,9 @@
 
   <body>
 
-    <img src="images/map.png">
+    <div class="map">
+      <img src="images/map.png">
+    </div>
 
     <footer>
       <div class="challenges-footer">
